--- a/Semesterprojekt/src/main.tex
+++ b/Semesterprojekt/src/main.tex
@@ -82,8 +82,8 @@
 \title{Semesterprojekt}
 \author[1]{Nik Benson}
 \affil[1]{\href{mailto:nik.benson@studmail.w-hs.de}{nik.benson@studmail.w-hs.de}}
-\author[2]{<name>}
-\affil[2]{\href{mailto:<email>}{<email>}}
+\author[2]{Marco Kanera}
+\affil[2]{\href{mailto:marco.kanera@studmail.w-hs.de}{marco.kanera@studmail.w-hs.de}}
 \author[3]{<name>}
 \affil[3]{\href{mailto:<email>}{<email>}}
 \author[4]{<name>}
