Beschreibungen zu den Anwendungsfällen

--- a/Semesterprojekt/src/main.tex
+++ b/Semesterprojekt/src/main.tex
@@ -115,4 +115,7 @@
 
     \section{Szenarien}\label{sec:szenarien}
         \input{szenarien}
+
+    \section{Anwendungsfälle}\label{sec:Anwendungsfälle}
+        \input{anwendungsfälle}
 \end{document}
