--- a/Semesterprojekt/src/main.tex
+++ b/Semesterprojekt/src/main.tex
@@ -116,6 +116,12 @@
     \section{Szenarien}\label{sec:szenarien}
         \input{szenarien}
 
+
     \section{Anwendungsfälle}\label{sec:Anwendungsfälle}
         \input{anwendungsfälle}
+
+
+    \section{User-stories}\label{sec:user-stories}
+    \input{user-stories}
+
 \end{document}
