feat(semesterprojekt): Kontextmodell

--- a/Semesterprojekt/src/anwendungsfälle.tex
+++ b/Semesterprojekt/src/anwendungsfälle.tex
@@ -1,4 +1,11 @@
-\subsection{Klingel betätigen}\label{subsec:klingel-betatigen}
+\begin{figure}[ht!]
+    \includegraphics[width=\paperwidth-2in]{../assets/img/UML-Anwendungsfalldiagramme-Klingeln bei einem Mehrfamilienhaus}
+    \caption{Diagram}
+    \label{fig:diagram}
+\end{figure}
+
+
+\paragraph{Klingel betätigen}
     \begin{description}
         \item[Ziel]\hfill \\
         Besucher möchte klingeln.
@@ -14,12 +21,13 @@
         Wohnungsbesitzer wird angerufen.
         \end{description}
 
-\subsection{Anruf annehmen}\label{subsec:anruf-annehmen}
+\paragraph{Anruf annehmen}
     \begin{description}
         \item[Ziel]\hfill \\
         Ein eingehender Anruf soll angenommen werden.
         \item[Beschreibung]\hfill \\
-        Indem der Benutzer auf die eingehende Benachritigung klickt, wird der Anruf angenommen.
+        Indem der Benutzer auf die eingehende Bena
+        \item chrichtigung klickt, wird der Anruf angenommen.
         Wenn die Visualisierung beim Benutzer schon geöffnet ist, kann der Anruf auch in der Visualisierung angenommen werden.
         \item[Akteure]\hfill \\
         Wohnungsbesitzer, Reparatur-Mitarbeiter, Zimmerservice.
@@ -31,7 +39,7 @@
         Anruf wurde angenommen und Gespräch gestartet.
         \end{description}
 
-\subsection{Anruf ablehnen}\label{subsec:anruf-ablehnen}
+\paragraph{Anruf ablehnen}
     \begin{description}
         \item[Ziel]\hfill \\
         Ein eingehender Anruf soll abgelehnt werden.
@@ -48,7 +56,7 @@
         Anruf wurde abgelehnt.
         \end{description}
 
-\subsection{Anruf beenden}\label{subsec:anruf-beenden}
+\paragraph{Anruf beenden}
     \begin{description}
         \item[Ziel]\hfill \\
         Ein laufender Anruf soll beendet werden.
@@ -64,7 +72,7 @@
         Anruf wurde beendet.
         \end{description}
 
-\subsection{Anruf weiterleiten}\label{subsec:anruf-weiterleiten}
+\paragraph{Anruf weiterleiten}
     \begin{description}
         \item[Ziel]\hfill \\
         Ein eingehender Anruf soll an einen ausgewählten Kontakt weitergeleitet werden.
@@ -82,7 +90,7 @@
         Anruf wurde an ausgewählten Kontakt weitergeleitet.
         \end{description}
 
-\subsection{Live-Bild der Kamera anschalten}\label{subsec:live-Bild-der-kamera-anschalten}
+\paragraph{Live-Bild der Kamera anschalten}
     \begin{description}
         \item[Ziel]\hfill \\
         Das Live-Bild der Kamera an der Eingangstür soll angeschaltet werden.
@@ -99,7 +107,7 @@
         Live-Bild wurde für den Wohnungsbesitzer angeschaltet.
         \end{description}
 
-\subsection{Live-Bild der Kamera ausschalten}\label{subsec:live-Bild-der-kamera-ausschalten}
+\paragraph{Live-Bild der Kamera ausschalten}
     \begin{description}
         \item[Ziel]\hfill \\
         Das Live-Bild der Kamera an der Eingangstür soll ausgeschaltet werden.
@@ -116,7 +124,7 @@
         Live-Bild wurde für den Wohnungsbesitzer ausgeschaltet.
         \end{description}
 
-\subsection{Automatikschloss der Tür aufschließen}\label{subsec:automatikschloss-der-tür-aufschließen}
+\paragraph{Automatikschloss der Tür aufschließen}
     \begin{description}
         \item[Ziel]\hfill \\
         Das Automatikschloss der Eingangstür soll aufgeschlossen werden, um den Besucher ins Gebäude zu lassen.
@@ -132,7 +140,7 @@
         Das Automatikschloss der Eingangstür wurde aufgeschlossen.
         \end{description}
 
-\subsection{Automatikschloss der Tür zuschließen}\label{subsec:automatikschloss-der-tür-zuschließen}
+\paragraph{Automatikschloss der Tür zuschließen}
     \begin{description}
         \item[Ziel]\hfill \\
         Das Automatikschloss der Eingangstür soll zugeschlossen werden.
@@ -148,7 +156,7 @@
         Das Automatikschloss der Eingangstür wurde zugeschlossen.
         \end{description}
 
-\subsection{Kontakt suchen und auswählen}\label{subsec:kontakt-suchen-und-auswählen}
+\paragraph{Kontakt suchen und auswählen}
     \begin{description}
         \item[Ziel]\hfill \\
         Der Benutzer hat einen gesuchten Kontakt ausgewählt, wenn es ihn gibt.
@@ -165,7 +173,7 @@
         Keine oder ein Kontakt wurde ausgewählt und kann angerufen werden.
         \end{description}
 
-\subsection{Kontakt anrufen}\label{subsec:kontakt-anrufen}
+\paragraph{Kontakt anrufen}
     \begin{description}
         \item[Ziel]\hfill \\
         Der Benutzer startet einen Anruf mit dem ausgewählten Kontakt.
@@ -181,7 +189,7 @@
         Ein Anruf mit Kontakt wurde gestartet.
         \end{description}
 
-\subsection{Bildschirmfreigabe starten}\label{subsec:bildschirmfreigabe-starten}
+\paragraph{Bildschirmfreigabe starten}
     \begin{description}
         \item[Ziel]\hfill \\
         Die Bildschirmfreigabe soll gestartet werden.
@@ -198,7 +206,7 @@
         Die Bildschirmfreigabe wurde gestartet.
         \end{description}
 
-\subsection{Bildschirmfreigabe stoppen}\label{subsec:bildschirmfreigabe-stoppen}
+\paragraph{Bildschirmfreigabe stoppen}
     \begin{description}
         \item[Ziel]\hfill \\
         Die Bildschirmfreigabe soll gestoppt werden.
@@ -215,7 +223,7 @@
         Die Bildschirmfreigabe wurde gestoppt.
         \end{description}
 
-\subsection{Aufgezeichnetes Videomaterial einsehen}\label{subsec:aufgezeichnetes-videomaterial-einsehen}
+\paragraph{Aufgezeichnetes Videomaterial einsehen}
     \begin{description}
         \item[Ziel]\hfill \\
         Aufgezeichnetes Videomaterial, das nicht älter als eine Woche ist, soll eingesehen werden.
