--- a/Semesterprojekt/src/main.tex
+++ b/Semesterprojekt/src/main.tex
@@ -96,32 +96,27 @@
     \pagenumbering{Roman}
     \addcontentsline{toc}{section}{Inhaltsverzeichnis}
     \tableofcontents
-    \newpage
     \addcontentsline{toc}{section}{Abbildungsverzeichnis}
     \listoffigures
-    \addcontentsline{toc}{section}{Tabellenvrzeichnis}
+    \addcontentsline{toc}{section}{Tabellenverzeichnis}
     \listoftables
     \newpage
     \pagenumbering{arabic}
+
+
+    \section{Aufgabenstellung}\label{sec:aufgabenstellung}
+        \input{aufgabenstellung}
 
 
     \section{Produktvision}\label{sec:produktvision}
         \input{produktvision}
 
 
-    \section{Persona-Stories}\label{sec:persona-stories}
-        \input{persona-stories}
+    \section{Produkt Strategie}\label{sec:produkt-strategie}
+        \input{produkt-strategie}
 
 
-    \section{Szenarien}\label{sec:szenarien}
-        \input{szenarien}
-
-
-    \section{Anwendungsfälle}\label{sec:Anwendungsfälle}
-        \input{anwendungsfälle}
-
-
-    \section{User-stories}\label{sec:user-stories}
-    \input{user-stories}
+    \section{Produkt Roadmap}\label{sec:produkt-roadmap}
+        \input{produkt-roadmap}
 
 \end{document}
