--- a/Semesterprojekt/src/persona-stories.tex
+++ b/Semesterprojekt/src/persona-stories.tex
@@ -1,20 +1,30 @@
-\subsection{Bewohner eines Mehrfamilienhauses}\label{subsec:bewohner-eines-mehrfamilienhauses}
-Als Bewohner möchte ich entscheiden können, ob auf meiner Klingel mein Name oder nur meine Hausnummer steht.
-Wenn die Klingel gedrückt wird, möchte ich einen einstellbaren Alarm auf meinem digitalen Endgerät erhalten und das Bild vor meiner Haustür einsehen können.
-Mit dem mobilen Endgerät möchte ich auch andere Bewohner meines Wohnkomplexes erreichen können und in einer Favoritenliste sortieren können.
-Bei Notwendigkeit möchte ich auch einen Hausverwalter (Administrator) kontaktieren können.
+\paragraph{Bewohner eines Mehrfamilienhauses}
+    Joanna Baumann ist eine 25. Jährige Datenschutzanwältin.
+    Schon immer fühlt sie sich mit ihrem Namen an der Tür unsicher.
+    Und es ärgert sie, dass sie nicht sieht, wer vor der Tür steht, wenn geklingelt wird.
+    Von dem neuen System erhofft sie sich ein komfortableres und sicheres Wohnen.
 
 
-\subsection{Hausverwalter}\label{subsec:hausverwalter}
-Als Hausverwalter möchte das Bild der Klingel meiner Wohnungen in der TEKLOTH Software einsehen können.
+\paragraph{Hausverwalter}
+    Zita Hoyer hat sich zu ihrem 30. Geburstag ihre erste Imobilie gekauft.
+    Diese vermietet sie an Tilo.
+    Das erste Jahr gab es keine Probleme, aber mit der Zeit hat sich der zugezogene Tilo Feinde gemacht.
+    Jetzt wird die Haustür fast wöchentlich beschmiert.
+    Zita möchte die Anlage installieren, auch um die Vandaliste zu erwischen.
 
 
-\subsection{Wartungsmitarbeiter einer Industriefirma}\label{subsec:wartungsmitarbeiter-einer-industriefirma}
-Als Wartungsmitarbeiter möchte ich in der Technik ein Gerät vorfinden, mit dem ich den Support verständigen kann.
-Der Videoanruf soll nach einer Prioritätenliste die Personen mit der besten Ahnung vom System anfragen, um den bestmöglichen Support zu erhalten.
-Dabei soll der Support Zugriff auf die entsprechende, von TEKLOTH verwaltete Technik, bekommen.
+\paragraph{Wartungsmitarbeiter einer Industriefirma}
+    Horst Keck ist 46 Jahre alt und hat sich mit 24 Jahren, mit seiner Firma \qq{Kek Maschieneninstandhaltungen}, selbstständig gemacht.
+    Mit seiner Firma wartet er unter anderem das Nuklearkraftwerk \qq{Energy Boom} in Bocholt.
+    Sowohl er als auch seine Mitarbeiter sind keine Nuklearphysiker, sondern Maschinenbauer.
+    Da der Betreiber des Kraftwerks aber in der Schweiz sitzt, ist es immer schwierig, die Einsätze über ein Handy zu begleiten.
+    Von der Software erhofft er sich fachlichen Support von Physikern des Betreibers, wenn er an der Anlage arbeitet.
 
 
-\subsection{Hotelbesucher}\label{subsec:hotelbesucher}
-Als Hotelbesucher möchte ich den Zimmerservice kontaktieren können.
-Außerdem möchte ich mittels der Zimmernummer Endgeräte in anderen Zimmern anrufen können.
+\paragraph{Hotelbesucher}
+    Bernd Meier ist 27 Jahre jung und Elektriker.
+    Er ist von der Elektronik GmbH auf Montage und soll in der Fachhochschule in Bocholt die Beamer neu verkabeln.
+    Dazu übernachtet er im Hotel \qq{Zur guten Übernachtung}.
+    Wenn er abends erschöpft von der Montage ins Hotel kommt, hat er meistens noch nicht gegessen.
+    Von der Software erhofft er sich eine einfache Kommunikation mit dem Zimmerservice.
+    Auch hofft er, dass er seinen Kollegen im Nebenzimmer morgen aus der Dusche klingeln kann.
