--- a/Semesterprojekt/src/szenarien.tex
+++ b/Semesterprojekt/src/szenarien.tex
@@ -1,4 +1,4 @@
-\subsection{Klingeln bei einem Mehrfamilienhaus}\label{subsec:klingeln-bei-einem-mehrfamilienhaus}
+\paragraph{Klingeln bei einem Mehrfamilienhaus}
     Eine dem Wohnungsbesitzer bekannte Person betätigt den Klingelknopf.
     Folglich wird eine Nachricht mit dem Namen der entsprechenden Anlage an ihn geschickt.
     Diese Nachricht löst auf seinem Mobilen Endgerät einen Alarm in der App aus.
@@ -6,12 +6,12 @@
     In der App sieht er nun das Live-Bild der Kamera und kann mit der klingelnden Person sprechen.
     Anschließend drückt er in der App auf einen Knopf und die Tür öffnet sich.
 
-\subsection{Vandalismus}\label{subsec:vandalismus}
+\paragraph{Vandalismus}
     Ein Bewohner des Hauses beschwert sich beim Hausverwalter, weil im öffentlichen Eingangsbereich Vandalismus begangen wurde.
     Dieser kann nun, bis zu einer Woche nach dem Vorfall das aufgezeichnete Videomaterial der Klingelanlagen an die Polizei weiterleiten.
     Dabei ist auf dem Videomaterial sämtlicher öffentlicher Grund zensiert.
 
-\subsection{Industrieanlage reparieren}\label{subsec:industrieanlage-reparieren}
+\paragraph{Industrieanlage reparieren}
     In einer sowohl wichtigen als auch gefährlichen Industrieanlage hat eines der kritischen Systeme die arbeit aus unbekannten Gründen eingestellt.
     Da die Anlage normalerweise über Fernwartung instandgehalten wird, wird ein externes Reparaturteam ohne zu spezifische Fachkenntnisse der Komponenten geschickt.
     Sowie diese an der Anlage eintreffen finden sie die Hardware, die diese Software beherbergt, in dem Schaltschrank der defekten Machine und drücken den Hilfeknopf.
@@ -20,7 +20,7 @@
     Diese geht sofort dran und holt nach kurzer Absprache die erste Person aus einem Meeting und leitet den Anruf weiter.
     Nun wird das Team mit dem notwendigen Wissen und den Arbeitsschritten, mittels des Videotelefonats, versorgt.
 
-\subsection{Zimmerservice}\label{subsec:zimmerservice}
+\paragraph{Zimmerservice}
     Ein Gast des Hotels bekommt hunger.
     Auf dem Gerät wählt er den Kontakt des Zimmerservice, angezeigt wird ein Bild mit einem QR Code zu der Speisekarte.
     Nach der Auswahl drückt er auf anrufen und der Zimmerservice nimmt ab.
