--- a/Semesterprojekt/src/title.tex
+++ b/Semesterprojekt/src/title.tex
@@ -10,6 +10,7 @@
         \Large{\textbf{Modul:} Softwaretechnik} \\
         \Large{\textbf{Gruppe:} 25} \\
         \Large{\textbf{Prüfer:} Prof. Herding}\\
-        \Large{\textbf{Semester:} WiSe 22/23}
+        \Large{\textbf{Semester:} WiSe 22/23}\\
+        \Large{\textbf{Auftraggeber:} TEKLOTH}
     \end{flushleft}
 \end{titlepage}
