--- a/Semesterprojekt/src/produkt-roadmap.tex
+++ b/Semesterprojekt/src/produkt-roadmap.tex
@@ -2,3 +2,6 @@ Nicht nur die Kundengruppe, sondern auch das Integrieren in vorhandene Subsystem
 
 \subsection{Kontextmodell}\label{subsec:kontextmodell}
     \input{kontextmodell}
+
+\subsection{Komponentendiagramm}\label{subsec:komponentendiagramm}
+    \input{komponentendiagramm}
